--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,17 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.3.1</version>
-        <plugin>
+        <configuration>
+              <skip>false</skip>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
         <version>3.0.2</version>
-        </plugin>
+        <configuration>
+              <skip>false</skip>
+        </configuration>
       </plugin>
     </plugins>
   </build>
